--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -18,6 +19,8 @@ flake8 = "^7.1.1"
 black = "^24.8.0"
 isort = "^5.13.2"
 mypy = "^1.11.2"
+
+[tool.isort]
 
 
 [tool.black]
@@ -37,8 +40,6 @@ exclude = '''
 )
 '''
 
-[tool.isort]
-line_lingth = 119
 
 [build-system]
 requires = ["poetry-core"]
